# AI-Agent-Software-Template

./: .gitignore  README.md  pyproject.toml
app/: database.py
app/api/v1/endpoints/: chat.py
app/logic/: llm.py
app/workflows/: rag_workflow.py
src/app/logic/: llm.py
src/app/models/logic/: llm.py
src/app/models/logic/tools/: weather.py
tests/: conftest.py  test_retrieval_node.py
tests/nodes/: test_llm_node.py  test_prompt_node.py
